[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pgdn-scanner"
version = "1.5.5"
description = "PGDN - DePIN Infrastructure Scanner Library"
readme = "README.md"
requires-python = ">=3.8"
license = "MIT"
authors = [{name = "DePIN Team"}]
keywords = ["depin", "infrastructure", "scanner", "security", "blockchain"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Security",
    "Topic :: System :: Networking :: Monitoring",
]
dependencies = [
    "requests>=2.31.0",
    "httpx>=0.25.0",
    "typing-extensions>=4.0.0",
    "pytest>=7.0.0",
    "pyyaml>=6.0.0",
    "pydantic>=2.0.0"
]

[project.scripts]
pgdn-scanner = "pgdn_entry:main"

[project.urls]
Homepage = "https://github.com/pgdn-network/pgdn-scanner"
Repository = "https://github.com/pgdn-network/pgdn-scanner"
Issues = "https://github.com/pgdn-network/pgdn-scanner/issues"